<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rltvLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
        <ProgressBar
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imgSrcDetail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvAppNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgSrcDetail"
            android:text="App Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvDevNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAppNameDetail"
            android:layout_toRightOf="@+id/imgSrcDetail"
            android:text="Developer Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent" />
        <LinearLayout
            android:layout_below="@id/imgSrcDetail"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:id="@+id/btnUninstall"
                android:text="@string/uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgSrcDetail" />
            <Button
                android:layout_weight="1"
                android:id="@+id/btnOpen"
                android:text="@string/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgSrcDetail"
                android:layout_toRightOf="@+id/btnInstall"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgSrcDetail"
                android:layout_toRightOf="@+id/btnInstall"/>
        </LinearLayout>

</RelativeLayout>
